# dynamic-dataset

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: preview_ablations.py
src/benchmark/: README.md  __init__.py  __main__.py  ablations_report.py  base.py  demo.py  graph_sampling.py  multimodal_demo.py  report.py  shortest_path.md  shortest_path_variants.py  state_search_variants.py  visualization.py
src/benchmark/rendering/: __init__.py  _planar_map.py  _voronoi.py  adjacency.py  config.py  directed_maze.py  latin_america_map.py  map_coloring.py  maze.py  plain_graph.py
src/benchmark/tasks/: __init__.py  coloring.py  connectivity.py  directed_connectivity.py  shortest_path.py
src/dataset-generator/: __init__.py  __main__.py  graph_generator.py  multimodal.py  visualization.py
src/dataset-generator/tasks/: __init__.py  advanced.py  basic.py  connectivity.py  pathfinding.py
tests/: test_render_config_smoke.py
